--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #1E293B;
+    background-color: #0a0c1f;
     color: #fff;
     font-size: 0.95em;
     overflow: hidden;
@@ -13,14 +13,22 @@ a {
     color: #fff;
 }
 a:hover {
-    color: #4ADE80;
+    color: #ea445a;
     text-decoration: none;
 }
-a.highlight {
-    color: #4ADE80;
+a.highlight1 {
+    color: #ea445a;
 }
-a.highlight:hover {
-    color: #4ADE80;
+a.highlight1:hover {
+    color: #ea445a;
+    text-decoration: underline;
+}
+a.highlight2 {
+    color: #65d2e9;
+}
+a.highlight2:hover {
+    color: #65d2e9;
+    text-decoration: underline;
 }
 
 
@@ -42,36 +50,105 @@ a.highlight:hover {
 
 .form-control {
     color: #e2e8f0;
-    background-color: #2f3a4c;
+    background-color: #232536;
     border-color: #162033;
     font-size: 0.95em;
     padding: 0.3rem 0.5rem;
 }
 .form-control:focus {
     /* outline: none; */
-    background-color: #2f3a4c;
-    border-color: #28a745;
-    box-shadow: inset 0 1px 1px rgba(77, 222, 128, 0.075), 0 0 8px rgba(77, 222, 128, 0.6);
+    background-color: #0a0c1f;
+    border-color: #65d2e9;
+    box-shadow: inset 0 1px 1px rgba(101,210,233, 0.075), 0 0 8px rgba(101,210,233, 0.6);
     color: #e2e8f0;
+}
+
+.color-custom1 {
+    color: #ea445a;
+}
+.bgcolor-custom1 {
+    color: #ea445a;
+}
+.text-custom1 {
+    color: #ea445a;
+}
+a.text-custom1:hover {
+    color: #ea445a;
+}
+.btn-custom1 {
+    color: #fff;
+    background-color: #ea445a;
+    border-color: #ea445a;
+}
+.btn-custom1:hover {
+    color: #fff;
+    background-color: #ea445a;
+    border-color: #ea445a;
+}
+.btn-outline-custom1 {
+    border-color: #ea445a;
+}
+.btn-outline-custom1:hover {
+    color: #fff;
+    background-color: #ea445a;
+    border-color: #ea445a;
+}
+
+.color-custom2 {
+    color: #65d2e9;
+}
+.bgcolor-custom2 {
+    color: #65d2e9;
+}
+.text-custom2 {
+    color: #65d2e9;
+}
+a.text-custom2:hover {
+    color: #65d2e9;
+}
+.btn-custom2 {
+    color: #fff;
+    background-color: #65d2e9;
+    border-color: #65d2e9;
+}
+.btn-custom2:hover {
+    color: #fff;
+    background-color: #65d2e9;
+    border-color: #65d2e9;
+}
+.btn-outline-custom2 {
+    border-color: #65d2e9;
+}
+.btn-outline-custom2:hover {
+    color: #fff;
+    background-color: #65d2e9;
+    border-color: #65d2e9;
+}
+
+
+#main {
+    background-color: #0a0c1f;
+    overflow-y: auto;
+    padding-bottom: 100px;
+    padding-top: 10px;
 }
 
 
 
-
 #topbar {
-    border-bottom: 2px solid #0f172a;
+    border-bottom: 2px solid #141729;
 }
 
 
 
 #tagbar {
-    background-color: #162033;
+    background-color: #0a0c1f;
     overflow-y: auto;
     padding-left: 5px;
     padding-right: 5px;
     /* padding-top: 10px; */
     width: 200px;
-    border-right: 2px solid #0f172a;
+    border-right: 2px solid #141729;
 }
 #tagbar nav a {
     font-size: 2em;
@@ -94,25 +171,25 @@ a.highlight:hover {
     font-size: 0.95em;
     padding: 6px;
 }
-#tagbar li.active {
+/* #tagbar li.active {
     background-color: #1E293B;
-}
+} */
 #tagbar li:hover {
-    background-color: #1E293B;
-    /* border-left: 3px solid #4ADE80; */
+    background-color: #232536;
+    /* border-left: 3px solid #ea445a; */
 }
 #tagbar li:hover .hashtag {
-    color: #4ADE80;
-    /* border-left: 3px solid #4ADE80; */
+    color: #65d2e9;
+    /* border-left: 3px solid #ea445a; */
 }
 #tagbar .badge {
-    color: #162033;
+    color: #0a0c1f;
     background-color: #FFF;
 }
 #tagbar li:hover .badge {
-    background-color: #4ADE80;
+    background-color: #65d2e9;
     color: #fff;
-    /* border-left: 3px solid #4ADE80; */
+    /* border-left: 3px solid #ea445a; */
 }
 
 #contributors img {
@@ -129,8 +206,63 @@ a.highlight:hover {
 
 
 
+.tool-card .card, .tool-card .card-body, .tool-card .list-group-item {
+    background-color: #141729;
+}
+.tool-card .card {
+    border: 2px solid #141729;
+    transition: transform .2s;
+}
+.tool-card .card:hover {
+    transform: scale(1.03);
+    /* transform: translate(0px, -10px); */
+}
+.tool-card .card-body {
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+.tool-card .card-footer {
+    background-color: #0a0c1f;
+}
+.tool-card .tool-name {
+    font-weight: bold;
+}
+.tool-card .tool-picture {
+    height: 200px;
+}
+.tool-card .tool-descr {
+}
+.tool-card .tool-tags {
+    font-size: 0.9em;
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+.tool-card .tool-link svg {
+    color: #fff;
+    width: 25px;
+}
+.tool-card .tool-link svg:hover {
+    color: #65d2e9;
+}
+.tool-card .tool-tags a {
+    color: #fff;
+    z-index: 9;
+}
+.tool-card .tag-link {
+    position :relative;
+}
+.tool-card .tag-link:hover {
+    text-decoration: underline;
+}
+.tool-card .stretched-link:hover {
+    text-decoration: none;
+}
+
+
+
+
 .hashtag {
-    /* color: #4ADE80; */
+    /* color: #ea445a; */
     color: #fff;
     /* font-size: 0.85em; */
     margin-right: 2px;
