--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -164,6 +164,7 @@ a.text-custom2:hover {
 #tagbar {
     background-color: #0a0c1f;
     overflow-y: auto;
+    padding-bottom: 100px;
     padding-left: 5px;
     padding-right: 5px;
     /* padding-top: 10px; */
@@ -355,42 +356,6 @@ $grid-breakpoints: (
 .tool-card .stretched-link:hover {
     text-decoration: none;
 }
-
-
-/*
-
-.offcanvas {
-    position: fixed;
-    bottom: 0;
-    z-index: 1050;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    max-width: 100%;
-    visibility: hidden;
-    background-color: #fff;
-    background-clip: padding-box;
-    outline: 0;
-    -webkit-transition: -webkit-transform .3s ease-in-out;
-    transition: -webkit-transform .3s ease-in-out;
-    -o-transition: transform .3s ease-in-out;
-    transition: transform .3s ease-in-out;
-    transition: transform .3s ease-in-out, -webkit-transform .3s ease-in-out;
-}
-
-.offcanvas-start {
-    top: 0;
-    left: 0;
-    width: 400px;
-    border-right: 1px solid rgba(0,0,0,.2);
-    transform: translateX(-100%);
-} */
 
 
 
