--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -193,13 +193,14 @@ a.text-custom3:hover {
 
 #tagbar {
     background-color: #0a0c1f;
+    border-right: 2px solid #141729;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-bottom: 100px;
     padding-left: 5px;
     padding-right: 5px;
     /* padding-top: 10px; */
     width: 250px;
-    border-right: 2px solid #141729;
 }
 #tagbar nav a {
     font-size: 2em;
