--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -161,7 +161,7 @@ a.text-custom3:hover {
 }
 
 
-#main {
+#main-content {
     background-color: #0a0c1f;
     overflow-y: auto;
     padding-bottom: 100px;
