--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,275 +1,295 @@
 body {
-    background-color: #0a0c1f;
-    color: #fff;
-    font-size: 0.95em;
-    /* overflow: hidden; */
+background-color: #0a0c1f;
+color: #fff;
+font-size: 0.93em;
+/* overflow: hidden; */
 }
 
+
 h1 {
-    /* font-size: 2em; */
+    font-size: 2em;
 }
+h2 {
+    font-size: 1.8em;
+}
+h3 {
+    font-size: 1.6em;
+}
+h4 {
+    font-size: 1.4em;
+}
+h5 {
+    font-size: 1.2em;
+}
+h6 {
+    font-size: 1em;
+}
+
 a {
-    color: #fff;
-    text-decoration: none;
+color: #fff;
+text-decoration: none;
 }
 a:hover {
-    color: #f9205a;
-    text-decoration: none;
+color: #f9205a;
+text-decoration: none;
 }
 a.highlight1 {
-    color: #f9205a;
+color: #f9205a;
 }
 a.highlight1:hover {
-    color: #f9205a;
-    text-decoration: underline;
+color: #f9205a;
+text-decoration: underline;
 }
 a.highlight2 {
-    color: #22d3ee;
+color: #22d3ee;
 }
 a.highlight2:hover {
-    color: #22d3ee;
-    text-decoration: underline;
+color: #22d3ee;
+text-decoration: underline;
 }
 
 svg {
-    font-size: 1.3rem;
+font-size: 1.3em;
 }
 svg.fa-house {
-    font-size: 1.1rem;
+font-size: 1.1em;
 }
 
 .rounded {
-    border-radius: 0.5rem !important;
+border-radius: 0.5rem !important;
 }
 
 .btn {
-    color: #fff;
-    /* font-size: 0.92em; */
+color: #fff;
+/* font-size: 0.92em; */
 }
 .btn:hover {
-    color: #fff;
+color: #fff;
 }
 .accordion-button, .btn:focus {
-    outline: none;
-    box-shadow: none;
+outline: none;
+box-shadow: none;
 }
 
 .form-control {
-    color: #fff;
-    background-color: #232536;
-    border-color: #162033;
-    font-size: 0.95em;
-    padding: 0.3rem 0.5rem;
+color: #fff;
+background-color: #232536;
+border-color: #162033;
+font-size: 0.93em;
+padding: 0.3rem 0.5rem;
+}
+.btn {
+font-size: 0.93em
 }
 button, button:focus:not(.focus-visible) {
-    outline: none;
-    box-shadow: none;
+outline: none;
+box-shadow: none;
 }
 .form-control:focus {
-    color: #fff;
-    background-color: #0a0c1f;
-    border-color: #22d3ee;
-    box-shadow: inset 0 1px 1px rgba(101,210,233, 0.075), 0 0 8px rgba(101,210,233, 0.6);
-    /* outline: none; */
+color: #fff;
+background-color: #0a0c1f;
+border-color: #22d3ee;
+box-shadow: inset 0 1px 1px rgba(101,210,233, 0.075), 0 0 8px rgba(101,210,233, 0.6);
+/* outline: none; */
 }
 
 .color-custom1 {
-    color: #f9205a;
+color: #f9205a;
 }
 .bgcolor-custom1 {
-    color: #f9205a;
+color: #f9205a;
 }
 .text-custom1 {
-    color: #f9205a;
+color: #f9205a;
 }
 a.text-custom1:hover {
-    color: #f9205a;
+color: #f9205a;
 }
 .btn-custom1 {
-    color: #fff;
-    background-color: #f9205a;
-    border-color: #d9003a;
+color: #fff;
+background-color: #f9205a;
+border-color: #d9003a;
 }
 .btn-custom1:hover {
-    color: #fff;
-    background-color: #f9205a;
-    border-color: #d9003a;
+color: #fff;
+background-color: #f9205a;
+border-color: #d9003a;
 }
 .btn-outline-custom1 {
-    border-color: #f9205a;
+border-color: #f9205a;
 }
 .btn-outline-custom1:hover {
-    color: #fff;
-    background-color: #f9205a;
-    border-color: #d9003a;
+color: #fff;
+background-color: #f9205a;
+border-color: #d9003a;
 }
 
 .color-custom2 {
-    color: #22d3ee;
+color: #22d3ee;
 }
 .bgcolor-custom2 {
-    color: #22d3ee;
+color: #22d3ee;
 }
 .text-custom2 {
-    color: #22d3ee;
+color: #22d3ee;
 }
 a.text-custom2:hover {
-    color: #22d3ee;
+color: #22d3ee;
 }
 .btn-custom2 {
-    color: #fff;
-    background-color: #22d3ee;
-    border-color: #0ea5e9;
+color: #fff;
+background-color: #22d3ee;
+border-color: #0ea5e9;
 }
 .btn-custom2:hover {
-    color: #fff;
-    background-color: #22d3ee;
-    border-color: #0ea5e9;
+color: #fff;
+background-color: #22d3ee;
+border-color: #0ea5e9;
 }
 .btn-outline-custom2 {
-    border-color: #22d3ee;
+border-color: #22d3ee;
 }
 .btn-outline-custom2:hover {
-    color: #fff;
-    background-color: #22d3ee;
-    border-color: #0ea5e9;
+color: #fff;
+background-color: #22d3ee;
+border-color: #0ea5e9;
 }
 
 .color-custom3 {
-    color: #facc15;
+color: #facc15;
 }
 .bgcolor-custom3 {
-    color: #facc15;
+color: #facc15;
 }
 .text-custom3 {
-    color: #facc15;
+color: #facc15;
 }
 a.text-custom3:hover {
-    color: #facc15;
+color: #facc15;
 }
 .btn-custom3 {
-    color: #fff;
-    background-color: #facc15;
-    border-color: #f59e0b;
+color: #fff;
+background-color: #facc15;
+border-color: #f59e0b;
 }
 .btn-custom3:hover {
-    color: #fff;
-    background-color: #facc15;
-    border-color: #f59e0b;
+color: #fff;
+background-color: #facc15;
+border-color: #f59e0b;
 }
 .btn-outline-custom3 {
-    border-color: #facc15;
+border-color: #facc15;
 }
 .btn-outline-custom3:hover {
-    color: #fff;
-    background-color: #facc15;
-    border-color: #f59e0b;
+color: #fff;
+background-color: #facc15;
+border-color: #f59e0b;
 }
 
 
 #main-content {
-    background-color: #0a0c1f;
-    /* overflow-y: auto; */
-    padding-bottom: 100px;
-    padding-top: 60px;
+background-color: #0a0c1f;
+/* overflow-y: auto; */
+padding-bottom: 100px;
+padding-top: 60px;
 
-    padding-left: 250px !important;
+padding-left: 250px !important;
 }
 
 
 
 #topbar {
-    border-bottom: 2px solid #141729;
-    position: fixed;
-    top:0;
+border-bottom: 2px solid #141729;
+position: fixed;
+top:0;
 
-    background-color: #0a0c1f;
-    padding-left: 250px !important;
-    width: 100%;
-    z-index: 10;
+background-color: #0a0c1f;
+padding-left: 250px !important;
+width: 100%;
+z-index: 10;
 }
 #topbar input {
-    padding-left: 40px;
+padding-left: 40px;
 }
 #topbar .go-search {
-    color: #22d3ee;
-    position: absolute;
-    padding: 5px 0px 5px 10px;
-    z-index: 100;
+color: #22d3ee;
+position: absolute;
+padding: 5px 0px 5px 10px;
+z-index: 100;
 }
 #topbar .reset-search-term {
-    margin-left: -25px;
-    padding-top: 5px;
-    z-index: 100;
+margin-left: -25px;
+padding-top: 5px;
+z-index: 100;
 }
 #topbar .reset-search-term {
-    color: #fff;
+color: #fff;
 }
 #topbar .reset-search-term:hover {
-    color: #ddd;
+color: #ddd;
 }
 
 
 #tagbar {
-    background-color: #0a0c1f;
-    border-right: 2px solid #141729;
-    overflow-x: hidden;
-    overflow-y: auto;
-    padding-bottom: 100px;
-    padding-left: 5px;
-    padding-right: 5px;
-    /* padding-top: 10px; */
-    width: 250px;
+background-color: #0a0c1f;
+border-right: 2px solid #141729;
+overflow-x: hidden;
+overflow-y: auto;
+padding-bottom: 100px;
+padding-left: 5px;
+padding-right: 5px;
+/* padding-top: 10px; */
+width: 250px;
 
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    z-index: 11;
+position: fixed;
+left: 0px;
+top: 0px;
+z-index: 11;
 }
 #tagbar nav a {
-    font-size: 2em;
+font-size: 2em;
 }
 #tagbar nav a:hover {
-    text-decoration: none;
+text-decoration: none;
 }
 #tagbar ul {
-    list-style-type: none;
+list-style-type: none;
 }
 #tagbar li {
-    /* border-left: 3px solid transparent; */
-    margin-bottom: 0px;
+/* border-left: 3px solid transparent; */
+margin-bottom: 0px;
 
-    /* padding: 2px 10px 2px 10px; */
+/* padding: 2px 10px 2px 10px; */
 }
 #tagbar .list-group-item {
-    background-color: transparent;
-    border: 0px;
-    font-size: 0.95em;
-    padding: 6px;
+background-color: transparent;
+border: 0px;
+font-size: 0.93em;
+padding: 6px;
 }
 /* #tagbar li.active {
-    background-color: #1E293B;
+background-color: #1E293B;
 } */
 #tagbar li:hover {
-    background-color: #232536;
-    /* border-left: 3px solid #f9205a; */
+background-color: #232536;
+/* border-left: 3px solid #f9205a; */
 }
 #tagbar li:hover .hashtag {
-    color: #22d3ee;
-    /* border-left: 3px solid #f9205a; */
+color: #22d3ee;
+/* border-left: 3px solid #f9205a; */
 }
 #tagbar .badge {
-    color: #0a0c1f;
-    background-color: #FFF;
+color: #0a0c1f;
+background-color: #FFF;
 }
 #tagbar li:hover .badge {
-    background-color: #22d3ee;
-    color: #fff;
-    /* border-left: 3px solid #f9205a; */
+background-color: #22d3ee;
+color: #fff;
+/* border-left: 3px solid #f9205a; */
 }
 
 #mobile-menu .lnk-close:hover {
-    color: #ddd;
+color: #ddd;
 }
 
 /* X-Small	None  <576px
@@ -280,76 +300,76 @@ Extra large	xl  ≥1200px
 Extra extra large xxl  ≥1400px */
 /*
 $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+xs: 0,
+sm: 576px,
+md: 768px,
+lg: 992px,
+xl: 1200px,
+xxl: 1400px
 ); */
 
 .show {
-    /* border: 5px solid #f00; */
-    visibility: visible !important;
-    /* display: block; */
-    transform: translateX(0) !important;
+/* border: 5px solid #f00; */
+visibility: visible !important;
+/* display: block; */
+transform: translateX(0) !important;
 }
 
 @media all and (max-width: 991px) {
-    #main-content {
-        padding-left: 0px !important;
-    }
-    #topbar {
-        padding-left: 0px !important;
-    }
+#main-content {
+    padding-left: 0px !important;
+}
+#topbar {
+    padding-left: 0px !important;
+}
 }
 
 @media all and (max-width: 1400px) {
-    #topbar #random-tool {
-        /* need place in the menu */
-        display: none;
-    }
+#topbar #random-tool {
+    /* need place in the menu */
+    display: none;
+}
 }
 
 @media all and (max-width: 991px) {
 
-	/* .offcanvas-header{ display:block; } */
+/* .offcanvas-header{ display:block; } */
 
-	#tagbar {
-		border-radius: 0;
-		display: block;
-        left: 0;
-		height: 100%;
-		overflow-x: hidden;
-		overflow-y: scroll;
-		position: fixed;
-        top: 0;
-		transform: translateX(-100%);
-		transition: visibility .3s ease-in-out, transform .3s ease-in-out;
-		visibility: hidden;
-        width: 50%;
-        max-width: 350px;
-		z-index: 1200;
-	}
+#tagbar {
+    border-radius: 0;
+    display: block;
+    left: 0;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    transform: translateX(-100%);
+    transition: visibility .3s ease-in-out, transform .3s ease-in-out;
+    visibility: hidden;
+    width: 50%;
+    max-width: 350px;
+    z-index: 1200;
+}
 }
 
 @media all and (max-width: 767px) {
-	#tagbar {
-		border-radius: 0;
-		display: block;
-        left: 0;
-		height: 100%;
-		overflow-x: hidden;
-		overflow-y: scroll;
-		position: fixed;
-        top: 0;
-		transform: translateX(-100%);
-		transition: visibility .3s ease-in-out, transform .3s ease-in-out;
-		visibility: hidden;
-        width: 80%;
-        max-width: 350px;
-		z-index: 1200;
-	}
+#tagbar {
+    border-radius: 0;
+    display: block;
+    left: 0;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: fixed;
+    top: 0;
+    transform: translateX(-100%);
+    transition: visibility .3s ease-in-out, transform .3s ease-in-out;
+    visibility: hidden;
+    width: 80%;
+    max-width: 350px;
+    z-index: 1200;
+}
 }
 
 
@@ -357,13 +377,13 @@ $grid-breakpoints: (
 
 
 #contributors img {
-    /* border-radius: 50px; */
+/* border-radius: 50px; */
 }
 
 
 
 #tool-details .link-close svg {
-    font-size: 1.5rem !important;
+    font-size: 1.5em !important;
 }
 #tool-details .link-close:hover {
     color: #ddd;
@@ -375,74 +395,74 @@ $grid-breakpoints: (
 
 
 .tool-card .card, .tool-card .card-body, .tool-card .list-group-item {
-    background-color: #141729;
+background-color: #141729;
 }
 .tool-card .card {
-    border: 2px solid #141729;
-    transition: transform .2s;
+border: 2px solid #141729;
+transition: transform .2s;
 }
 .tool-card .card:hover {
-    transform: scale(1.03);
-    /* transform: translate(0px, -10px); */
+transform: scale(1.03);
+/* transform: translate(0px, -10px); */
 }
 .tool-card .card-body {
-    margin-bottom: 0px;
-    margin-top: 0px;
+margin-bottom: 0px;
+margin-top: 0px;
 }
 .tool-card .card-footer {
-    background-color: #0a0c1f;
+background-color: #0a0c1f;
 }
 .tool-card .tool-name {
-    font-weight: bold;
+font-weight: bold;
 }
 .tool-card .tool-picture {
-    height: 200px;
+height: 200px;
 }
 .tool-card .tool-descr {
 }
 .tool-card .tool-tags {
-    font-size: 0.9em;
-    padding-left: 10px;
-    padding-bottom: 10px;
+font-size: 0.9em;
+padding-left: 10px;
+padding-bottom: 10px;
 }
 .tool-card .tool-link svg {
-    /* color: #fff; */
+/* color: #fff; */
 }
 .tool-card .tool-link svg:hover {
-    color: #22d3ee;
+color: #22d3ee;
 }
 .tool-card .tool-tags a {
-    color: #fff;
-    z-index: 9;
+color: #fff;
+z-index: 9;
 }
 .tool-card .tag-link {
-    position :relative;
+position: relative;
 }
 .tool-card .tag-link:hover {
-    text-decoration: underline;
+text-decoration: underline;
 }
 .tool-card .stretched-link:hover {
-    text-decoration: none;
+text-decoration: none;
 }
 
 
 
 .hashtag {
-    /* color: #f9205a; */
-    color: #fff;
-    /* font-size: 0.85em; */
-    margin-right: 2px;
+/* color: #f9205a; */
+color: #fff;
+/* font-size: 0.85em; */
+margin-right: 2px;
 }
 
 .subtitle {
-    color: #eee;
-    font-size: 1.2em;
+color: #eee;
+font-size: 1.2em;
 }
 
 
 
 .uneedbest {
-    color: #f8ba74;
+color: #f8ba74;
 }
 .uneedbest:hover {
 color: #f8ba74;
